--- a/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
+++ b/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
@@ -8,17 +8,16 @@
     </thead>
     <tbody>
         <tr *ngFor="let el of elements; let i of index">
-
             <td>{{el.resp_asg}}</td>
             <td>{{el.fecha}}</td>
-            <td>{{el.cantidad}}</td>
+            <td style="text-align: right;">{{el.cantidad | currency }}</td>
             <td>{{el.motivo}}</td>
             <td>{{el.tipo_gasto}}</td>
             <td>{{el.proyecto}}</td>
             <td>{{el.estatus}}</td>
             <td>
-                <button type="button" class="btn btn-outline-success mr-2" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
-                <button type="button" class="btn btn-outline-danger" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+                <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
+                <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
             </td>
         </tr>
 
