--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,11 +1,5 @@
-<div class="waveAnimation">
-    <div class="waveWrapperInner">
-        <div class="wave waveTop"></div>
-    </div>
-    <div class="waveWrapperInner">
-        <div class="wave waveMiddle"></div>
-    </div>
-    <div class="waveWrapperInner">
-        <div class="wave waveBottom"></div>
-    </div>
-</div>
+<br>
+<footer class="page-footer font-small flex ">
+    © 2020 Copyright ASG
+    <br>
+</footer>
