--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-light bg-light mb-3">
     <a class="navbar-brand">
         <div id="sidenav" class="sidenav">
-            <a href="javascript:void(0)" id='closebtn' class="closebtn" onclick="closeNav()">&times;</a>
+            <!-- <a href="javascript:void(0)" id='closebtn' class="closebtn" onclick="closeNav()">&times;</a> -->
             <div class="acordeon">
                 <img src="../../../assets/img/logo.png" width="100%" height="15%">
                 <div class="acordeon__item">
@@ -10,9 +10,9 @@
                     <label for="item1" class="acordeon__titulo">Registrar</label>
                     <div class="btn-group-vertical acordeon__contenido">
                         <button type="button" class="btn btn-default" routerLink="/registro-clientes">Clientes</button>
-                        <button type="button" class="btn btn-default" routerLink="/registro-usuarios">Usuarios ASG</button>
+                        <button type="button" class="btn btn-default" routerLink="/registro-gastos">Gastos Generales</button >
                         <button type="button" class="btn btn-default" routerLink="/registro-proyectos">Proyectos</button>
-                        <button type="button" class="btn btn-default" routerLink="/registro-gastos">Gastos generales</button >
+                        <button type="button" class="btn btn-default" routerLink="/registro-usuarios">Usuarios ASG</button>
                     </div>
                 </div>
                 <div class="acordeon__item">
@@ -20,14 +20,15 @@
                     <label for="item2" class="acordeon__titulo">Registros</label>
                     <div class="btn-group-vertical acordeon__contenido">
                         <button type="button" class="btn btn-default" routerLink="/clientes">Clientes</button>
+                        <button type="button" class="btn btn-default" routerLink="/gastos">Gastos Generales</button >
                         <button type="button" class="btn btn-default" routerLink="/usuarios">Usuarios ASG</button>
                         <button type="button" class="btn btn-default" routerLink="/proyectos">Proyectos</button>
-                        <button type="button" class="btn btn-default" routerLink="/gastos">Gastos generales</button >
+
                     </div>
                 </div>
                 <div class="acordeon__item">
                     <input type="radio" name="acordeon" id="item3">
-                    <label  data-toggle="tooltip" data-placement="right" title="Caja" for="item3" class="acordeon__titulo">Oficina</label>
+                    <label data-toggle="tooltip" data-placement="right" title="Caja" for="item3" class="acordeon__titulo">Oficina</label>
                     <div class="btn-group-vertical acordeon__contenido">
                         <button type="button" class="btn btn-default" routerLink="/registro-oficina">Registrar</button>
                         <button type="button" class="btn btn-default" routerLink="/oficina">Registro</button>
@@ -37,4 +38,5 @@
         </div>
         <span onclick="openNav()">&#9776;</span>
     </a>
+    <a>©2020 Copyright ASG Advisory Services</a>
 </nav>
