--- a/src/app/components/altas/proyectos/proyectos.component.css
+++ b/src/app/components/altas/proyectos/proyectos.component.css
@@ -1,7 +1,7 @@
 .flex-container {
     display: flex;
-    justify-content: space-between;
-    margin-right: 20%;
+    justify-content: space-around;
+    /* margin-right: 20%; */
 }
 
 .card {
