--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -2,9 +2,10 @@
 <h1>{{ titulo }}</h1>
 <div class="m-3 col-md-10 card ">
     <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
-        <div class="flex-container ">
+        <div class="flex-container">
             <div>
                 <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
+                <p *ngIf="submitted && fval.resp_asg.invalid">*Este campo no puede ir vacío</p>
                 <select id="resp_asg" formControlName="resp_asg">
                 <option disabled value="">Responsable ASG</option>
                 <option *ngFor="let usuario of usuarios">{{usuario.nombre}}</option>
@@ -12,6 +13,7 @@
             </div>
             <div>
                 <label class="control-label mr-2" for="tipo_gasto">Tipo:</label><br>
+                <p *ngIf="submitted && fval.tipo.invalid">*Este campo no puede ir vacío</p>
                 <select id="tipo_gasto" formControlName="tipo">
                     <option disabled value="">Tipo</option>
                     <option value="Egreso">Egreso</option>
@@ -21,18 +23,18 @@
             </div>
             <div>
                 <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                <p *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
                 <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
             </div>
         </div>
         <div>
-            <label class="control-label" for="cantidad ">Cantidad: </label>
-            <input class="form-control col-md-12" id="cantidad " placeholder="Cantidad" formControlName="cantidad" type="text">
+            <label class="control-label" for="monto">Monto: </label>
+            <input class="form-control col-md-12" id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
             <br/>
             <label class="control-label" for="descripcion">Motivo: </label>
-            <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text">
+            <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
             <br/>
         </div>
-
         <br>
         <br/>
         <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
