--- a/src/app/components/altas/usuarios/usuarios.component.css
+++ b/src/app/components/altas/usuarios/usuarios.component.css
@@ -1,11 +1,15 @@
 .flex-container {
     display: flex;
-    justify-content: space-between;
-    /* margin-right: 20%; */
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer {
+    margin-top: 22%;
 }
 
 .card {
-    margin-left: 10% !important;
     padding-top: 2%;
     padding-bottom: 2%;
 }
