--- a/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
+++ b/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
@@ -11,8 +11,8 @@
             <td>{{el.nombre}}</td>
             <td>{{el.puesto}}</td>
             <td>
-                <button type="button" class="btn btn-outline-success mr-2" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
-                <button type="button" class="btn btn-outline-danger" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+                <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
+                <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
             </td>
         </tr>
     </tbody>
