--- a/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
+++ b/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
@@ -1,5 +1,6 @@
 <navbar></navbar>
 <h1>Registro {{titulo}}</h1>
+<div class="loading" *ngIf="loading">Loading&#8230;</div>
 <table class="table">
     <thead>
         <tr>
