--- a/src/app/components/altas/clientes/clientes.component.html
+++ b/src/app/components/altas/clientes/clientes.component.html
@@ -1,18 +1,19 @@
 <navbar></navbar>
 <h1>{{ titulo }}</h1>
 <div class="m-3 col-md-10 card ">
+    <div class="loading" *ngIf="loading">Loading&#8230;</div>
     <form [formGroup]="cteForm" (ngSubmit)="onSubmit()">
         <label class="control-label" for="nombre">Nombre: </label>
-        <input class="form-control col-md-10" id="nombre" placeholder="Nombre" formControlName="nombre" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
+        <input class="form-control" id="nombre" placeholder="Nombre" formControlName="nombre" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
         <br>
         <label class="control-label" for="empresa">Empresa: </label>
-        <input class="form-control col-md-10 " id="empresa" placeholder="Empresa" formControlName="empresa" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.empresa.errors }">
+        <input class="form-control" id="empresa" placeholder="Empresa" formControlName="empresa" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.empresa.errors }">
         <br>
         <label class="control-label" for="puesto">Puesto: </label>
-        <input class="form-control col-md-10" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.puesto.errors }">
+        <input class="form-control" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.puesto.errors }">
         <br/>
         <label class="control-label" for="celular">Celular: </label>
-        <input class="form-control col-md-10" id="celular" placeholder="Celular" formControlName="celular" type="text" (keyup)="checkNumeros($event)">
+        <input class="form-control" id="celular" placeholder="Celular" formControlName="celular" type="text" (keyup)="checkNumeros($event)">
         <br/>
         <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
             {{boton}}</button>
