--- a/src/app/components/altas/proyectos/proyectos.component.css
+++ b/src/app/components/altas/proyectos/proyectos.component.css
@@ -1,13 +1,21 @@
 .flex-container {
     display: flex;
-    justify-content: space-around;
-    /* margin-right: 20%; */
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .card {
     margin-left: 10% !important;
     padding-top: 2%;
     padding-bottom: 2%;
+}
+
+.seleccionador {
+    width: 200px;
+}
+
+.seleccionadorResp {
+    width: 200px;
 }
 
 label {
