--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -1,16 +1,22 @@
 <navbar></navbar>
 <div class="flex-container row">
-    <h1>{{ titulo }}</h1>
+    <h1 class="center">{{ titulo }}</h1>
     <div class="m-3 col-md-10 card ">
         <div class="loading" *ngIf="loading">Loading&#8230;</div>
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
             <label class="control-label" for="nombre">Nombre: </label>
-            <input class="form-control col-md-10" id="nombre" placeholder="Nombre" formControlName="nombre" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
+            <input class="form-control " id="nombre" placeholder="Nombre" formControlName="nombre" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
             <br>
             <label class="control-label" for="puesto ">Puesto: </label>
-            <input class="form-control col-md-10" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.puesto.errors }">
+            <input class="form-control" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.puesto.errors }">
             <br/>
-            <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+            <div *ngIf="actualizar" class="center">
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
+                    Cancelar</button>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
+                        Actualizar</button>
+            </div>
+            <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
             {{boton}}</button>
         </form>
     </div>
