--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,20 @@ p {
     right: 0;
 }
 
+.btn-g {
+    width: 50%;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-centrado {
+    display: flex;
+    justify-content: center;
+}
+
 
 /* Transparent Overlay */
 
