--- a/src/styles.css
+++ b/src/styles.css
@@ -47,18 +47,19 @@ p {
     right: 0;
 }
 
-.btn-g {
-    width: 50%;
-}
-
 .center {
     display: flex;
     justify-content: center;
 }
 
-.btn-centrado {
-    display: flex;
+button#guardar {
     justify-content: center;
+    display: flex;
+    background-color: #4E936F;
+    color: white;
+    font-weight: bold;
+    border-radius: 5%;
+    /* margin-left: 25%; */
 }
 
 
