--- a/src/app/components/altas/clientes/clientes.component.css
+++ b/src/app/components/altas/clientes/clientes.component.css
@@ -22,40 +22,10 @@ button#guardar {
     margin-left: 25%;
 }
 
-input,
-textarea {
+input {
     border-bottom: 1px solid #ebebee;
     border-top: none;
     border-left: none;
     border-right: none;
     box-shadow: transparent;
-}
-
-input:focus,
-textarea:focus {
-    border: none;
-    /* outline: 0; */
-    border-bottom: 2px solid#c34613;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    box-shadow: 0 1px 1px transparent !important;
-}
-
-select {
-    background: none;
-    border-bottom: 2px solid #ebebee;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-}
-
-select:focus {
-    border: none;
-    /* outline: 0; */
-    border-bottom: 2px solid#c34613;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    box-shadow: 0 1px 1px transparent !important;
 }
